--- a/public/front_assets/css/style.css
+++ b/public/front_assets/css/style.css
@@ -2164,6 +2164,9 @@ img {
   margin-right: 10px;
   width: 30px;
 }
+#aa-product-details .aa-product-details-area .aa-product-details-content .aa-product-view-content .aa-color-tag .aa-color-red {
+  background-color: #f90000;
+}
 #aa-product-details .aa-product-details-area .aa-product-details-content .aa-product-view-content .aa-color-tag .aa-color-green {
   background-color: #008000;
 }
